<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NickNameChanger</string>
    <string name="action_settings">Settings</string>
    <string name="dummy"> </string>
    <string name="open_handlename_settings_dialog">Settings</string>
	<string name="undefined_handle_name">Undefined</string>
	<string name="apptype_gree">GREE</string>
	<string name="application_type_name">Application Name</string>
	<string name="login_name">Login Name</string>
	<string name="gree_login_name">Mail Address</string>
	<string name="password">Password</string>	
	<string name="handle_name">Handle Name</string>
	<string name="ok">OK</string>	
	<string name="cancel">Cancel</string>
	<string name="tying_login">Tring login.</string>
	<string name="logined">logined.</string>
	<string name="changing">Changing Nick Name.</string>
	<string name="changed">Nick Name Changed.</string>
	<string name="request_changing">%1$s Changing Request.</string>
	<string name="logouted">Logouted.</string>
	<string name="change_handle_name_success">Changing nick name was succeeded.</string>	
	<string name="change_handle_name_maybe_failed">Changing nick name maybe failed.</string>	
	<string name="sample_handle_name_0">Foo【OK】</string>	
	<string name="sample_handle_name_1">Foo【MAYBE】</string>	
	<string name="sample_handle_name_2">Foo【NG】</string>	
	<string name="gree_account_usage">Please input mailaddress and password(optional) for GREE. </string>
	<string name="request">Request</string>
	<string name="copy_from_other_settings">Copy From Other Setting</string>
	<string name="request_on">Doriland(request ON)</string>
	<string name="request_off">Doriland(request OFF)</string>
	<string name="do_not_copy">Do not copy</string>
	<string name="login_usage">Please input password and tap login button.</string>
	<string-array name="request_entries">  
	    <item>Not Change</item>  
		<item>Request ON</item>  
   		<item>Request OFF</item>  
	</string-array> 
    <string name="co_operation">Co-op</string>
    <string name="select_games">Games</string>
    <string name="game_0">Doriland</string>
    <string name="game_1">Kerberos</string>
    <string name="game_2">Monpura</string>
    <string name="game_3">TsuriSta</string>
    <string name="game_4">Baseball Dream9</string>
    <string name="game_5">Gundam Masters</string>
    <string name="game_6">Oozumo Card Battle</string>
    <string name="msg_game_select">Select target games.</string>
    <string name="dlgtitle_gree">GREE</string>

</resources>