<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
   	android:layout_width="fill_parent" 
   	android:layout_height="fill_parent">
	<TableLayout
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:layout_weight="1">
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<CheckBox 
				android:id="@+id/chk_game_0"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/game_0"/>
		</TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<CheckBox 
				android:id="@+id/chk_game_1"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/game_1"/>
		</TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<CheckBox 
				android:id="@+id/chk_game_2"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/game_2"/>
		</TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<CheckBox 
				android:id="@+id/chk_game_3"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/game_3"/>
		</TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<CheckBox 
				android:id="@+id/chk_game_4"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/game_4"/>
		</TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<CheckBox 
				android:id="@+id/chk_game_5"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/game_5"/>
		</TableRow>
	    <TableRow
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
			<CheckBox 
				android:id="@+id/chk_game_6"
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/game_6"/>
		</TableRow>
	</TableLayout>
</ScrollView>