<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/handlename_setting"  
   	android:layout_width="fill_parent" 
   	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TableLayout
		    android:layout_height="wrap_content"
		    android:layout_width="fill_parent"
		    android:layout_weight="1">
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/application_type_name">
				</TextView>
			</TableRow>
		    <TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<RadioGroup
				    android:id="@+id/appTypeGroup"
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<RadioButton
					    android:id="@+id/radioGree"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/apptype_gree" />
				</RadioGroup>
			</TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/gree_account_usage"
					android:textColor="#0000ff">
				</TextView>
			</TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<TextView
				    android:id="@+id/textLoginName"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/login_name">
				</TextView>
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<EditText
					android:id="@+id/editLoginName"
					android:singleLine="true"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:imeOptions="actionDone">
					<requestFocus></requestFocus>
				</EditText>
			</TableRow>
		    <TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/password">
				</TextView>
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<EditText
					android:id="@+id/editPassword"
					android:singleLine="true"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:password="true"
					android:imeOptions="actionDone">
				</EditText>
			</TableRow>
			<TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/handle_name">
				</TextView>
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<EditText
					android:id="@+id/editHandleName"
					android:singleLine="true"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:imeOptions="actionDone">
				</EditText>
			</TableRow>
			<TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/doriland_request">
				</TextView>
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<Spinner  
					android:id="@+id/spinnerDoriReq"  
					android:layout_width="wrap_content"  
					android:layout_height="wrap_content"  
					android:entries="@array/dori_req_entries">  
				</Spinner> 
			</TableRow>
			<TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<View
					android:layout_width="wrap_content" 
					android:background="#000000" 
					android:layout_height="2dp" 
					android:layout_marginTop="4dp"
					android:layout_marginBottom="4dp">
				</View>
			</TableRow>
			<TableRow
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/copy_from_other_settings">
				</TextView>
			</TableRow>
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
				<Spinner  
					android:id="@+id/spinnerCopySettings"  
					android:layout_width="wrap_content"  
					android:layout_height="wrap_content">  
				</Spinner> 
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>